# SainteLyon-data-scraping-and-analysis

./: STL_analysis_and_modeling.ipynb  Saintelyon_checkpoints.csv  pyproject.toml  scraping_stl.py
