[tool.poetry]
name = "enduraw"
version = "0.1.0"
description = ""
authors = ["KarlLbs <karl.lubbos@ensea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=2.0.2"
matplotlib = ">=3.9.4"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
lxml = "^5.3.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
adjusttext = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
